parser/src/test/resources/corpus/valid/28_allocate_equally.ff
rule "Allocate Equally" {
  allocate USD 100,000 across investors of fund equally
}
