parser/src/test/resources/corpus/invalid/25_allocate_missing_method.ff
rule "Allocate Missing Method" {
  allocate USD 100,000 across investors of fund
}
